Add jspm meta info for autoprefixer.

--- a/package.json
+++ b/package.json
@@ -35,5 +35,12 @@
   "bugs": {
     "url": "https://github.com/geelen/jspm-loader-css/issues"
   },
-  "homepage": "https://github.com/geelen/jspm-loader-css"
+  "homepage": "https://github.com/geelen/jspm-loader-css",
+  "jspm": {
+    "meta": {
+      "autoprefixer.js": {
+        "format": "global"
+      }
+    }
+  }
 }
