--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "version": "1.1.0",
   "description": "A CSS loader for JSPM. Install",
   "dependencies": {
-    "css-modules-loader-core": "^1.0.0-beta2",
+    "css-modules-loader-core": "alteredconstants/css-modules-loader-core#master",
     "debounce": "^1.0.0",
     "path": "^0.12.7",
     "toposort": "^0.2.12"
